--- a/src/components/tablleBody/tablleBody.module.css
+++ b/src/components/tablleBody/tablleBody.module.css
@@ -88,3 +88,18 @@
     padding: 6px; 
   }
 }
+.filterRow{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.formInput {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  outline: none;
+  transition: 0.3s;
+}
